tests/base/invalid/Char_Invalid_1.whiley
import whiley.lang.*:*

char f(char c):
    return c + 1
